Created chat app

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <div class="content">
         <div class="chat">
             <div class="output"></div>
+            <div class="feedback"></div>
         </div>
         <label for="nickname">Nickname</label><input type="text" name="nickname" id="nickname">
         <label for="message">Message</label><input type="text" name="message" id="message">
