Added online count

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="content">
         <div class="chat">
+            <div class="online">Online: 0</div>
             <div class="output"></div>
             <div class="feedback"></div>
         </div>
